manifests/horseproject/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: horseproject
  labels:
    name: horseproject
