manifests/horseproject/consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-event-consumer
  namespace: horseproject
  labels:
    app: kafka-event-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-event-consumer
  template:
    metadata:
      labels:
        app: kafka-event-consumer
    spec:
      containers:
        - name: consumer
          image: likespro/horse-backend:latest
          command: ["python", "-m", "app.kafka_event_consumer"]
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
