manifests/horseproject/kafka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: horseproject
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: confluentinc/cp-zookeeper:7.4.0
          ports:
            - containerPort: 2181
              name: client
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: horseproject
  labels:
    app: zookeeper
spec:
  ports:
    - port: 2181
      targetPort: 2181
      protocol: TCP
  selector:
    app: zookeeper
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: horseproject
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      enableServiceLinks: false
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:7.4.0
          ports:
            - containerPort: 9092
              name: external
          resources:
            limits:
              cpu: "1"
              memory: 1.5Gi
            requests:
              cpu: 250m
              memory: 512Mi
      # We wait for zookeeper to be ready before starting kafka
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: horseproject
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      targetPort: 9092
      protocol: TCP
  selector:
    app: kafka
  type: ClusterIP
